Added script to HTML and modified some script

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <div id=resultsContainer>
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
